@Review Marcus, Gustav [UVMS-1524] Bug fix for polling selection div overflow.
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/unionvms-web@3928 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/app/partial/polling/newPollWizard/selection/newPollWizardSelection.less
+++ b/app/partial/polling/newPollWizard/selection/newPollWizardSelection.less
@@ -1,3 +1,15 @@
+.newPollWizardSelectionContainer{
+    overflow-y: auto;
+
+    .scroller{
+        height: 755px;
+        max-height: 755px;        
+        overflow-y: auto;
+        overflow-x: hidden;
+        .scrollbar();
+    }
+}
+
 .newPollWizardSelectionContainer ul {
 }
 
